--- a/index.html
+++ b/index.html
@@ -135,3 +135,4 @@ target="_blank">linkedin.com/in/mohammad-hani-aghaei-0a10513a9
 <script src="script.js"></script>
 </body>
 </html>
+<!--rebuild-->
