--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>محمد هانی آقایی قمصری | وبسایت شخصی</title>
 <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styless/style.css">
+<script src="scripts/script.js"></script>
 </head>
 <body>
 
