--- a/index.html
+++ b/index.html
@@ -67,13 +67,20 @@
 </section>
 
 <section class="section" id="contact">
-  <h2>تماس با من</h2>
+  <h2>ارتباط با من</h2>
 
   <div class="contact-info">
+<p>
     ایمیل:
     <a href="mailto:mohammadhaniaghaei2007@gmail.com">
       mohammadhaniaghaei2007@gmail.com
     </a>
+</p>
+    لینکدین:
+    <a href="https://www.linkedin.com/in/mohammad-hani-aghaei-0a10513a9"
+      target="_blank">linkedin.com/im/mohammad-hani-aghaei-0a10513a9
+    </a>
+  </p>
   </div>
 
 </section>
