--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
 او همچنین در چندین اجرای تئاتر دانش‌آموزی و دانشگاهی حضور داشته و تجربه‌های متعددی در زمینه هنرهای نمایشی کسب کرده است.
 
-محمد هانی آقایی قمصری با هنرمندان مختلفی از جمله خوانندگانی همچون حمید عسکری همکاری داشته و در حوزه بازیگری با افرادی نظیر علیرضا استادی، رضا قنواتی و پیمان احمدی‌نیا تعامل حرفه‌ای برقرار کرده است.
+محمد هانی آقایی قمصری با هنرمندان مختلفی از جمله خوانندگانی همکاری داشته و در حوزه بازیگری با افرادی نظیر علیرضا استادی، رضا قنواتی و پیمان احمدی‌نیا تعامل حرفه‌ای برقرار کرده است.
 
-وی همچنین با کارگردانانی همچون بهمن کامیار و بابک خواجه پاشا همکاری داشته و در حوزه استندآپ کمدی نیز با سجاد اسماعیلی در ارتباط بوده است.
+وی همچنین با کارگردانانی همچون بهمن کامیار و بابک خواجه پاشا  و در حوزه استندآپ کمدی نیز با سجاد اسماعیلی در ارتباط بوده است.
 
 در حوزه موسیقی نیز با تهیه‌کنندگان و فعالان این عرصه از جمله حسین کاکاوندی و جابر ماجدی همکاری و تعامل داشته است.
 
